# autoware.universe

./: merge_awf-latest_branch.sh
.github/: CODEOWNERS
common/nlp_interface/: CMakeLists.txt  package.xml
common/nlp_interface/design/: nlp_interface-design.md
common/nlp_interface/include/nlp_interface/: cgmres_interface.hpp  nlp_interface.hpp
common/nlp_interface/src/: cgmres_interface.cpp  nlp_interface.cpp
control/autoware_autonomous_emergency_braking/: README.md
control/autoware_mpc_lateral_controller/: CMakeLists.txt  package.xml
control/autoware_mpc_lateral_controller/debug/: visualize_path.py
control/autoware_mpc_lateral_controller/include/autoware/mpc_lateral_controller/: mpc.hpp  mpc_cgmres.hpp  mpc_lateral_controller.hpp  mpc_utils.hpp
control/autoware_mpc_lateral_controller/include/autoware/mpc_lateral_controller/qp_solver/: qp_solver_cgmres.hpp  qp_solver_interface.hpp
control/autoware_mpc_lateral_controller/include/autoware/mpc_lateral_controller/steering_offset/: steering_offset.hpp
control/autoware_mpc_lateral_controller/include/autoware_mpc_lateral_controller/: mpc.hpp  mpc_cgmres.hpp  mpc_lateral_controller.hpp
control/autoware_mpc_lateral_controller/include/autoware_mpc_lateral_controller/qp_solver/: qp_solver_cgmres.hpp  qp_solver_interface.hpp
control/autoware_mpc_lateral_controller/include/autoware_mpc_lateral_controller/steering_offset/: steering_offset.hpp
control/autoware_mpc_lateral_controller/msg/: MpcDebug.msg
control/autoware_mpc_lateral_controller/param/: lateral_controller_cgmres.param.yaml
control/autoware_mpc_lateral_controller/src/: mpc.cpp  mpc_lateral_controller.cpp  mpc_utils.cpp
control/autoware_mpc_lateral_controller/src/qp_solver/: qp_solver_cgmres.cpp
control/autoware_mpc_lateral_controller/src/steering_offset/: steering_offset.cpp
control/autoware_mpc_lateral_controller/src/vehicle_model/: vehicle_model_bicycle_kinematics.cpp
control/autoware_mpc_lateral_controller/test/: test_cgmres.cpp  test_mpc.cpp
control/autoware_pid_longitudinal_controller/src/: pid.cpp  pid_longitudinal_controller.cpp
control/autoware_trajectory_follower_node/: CMakeLists.txt  package.xml
control/autoware_trajectory_follower_node/design/: simple_trajectory_follower-design.md
control/autoware_trajectory_follower_node/test/: test_controller_node.cpp  trajectory_follower_test_utils.hpp
control/mpc_lateral_controller/: package.xml
control/mpc_lateral_controller/src/: mpc.cpp  mpc_lateral_controller.cpp
control/mpc_lateral_controller/test/: test_mpc.cpp
control/pid_longitudinal_controller/src/: pid_longitudinal_controller.cpp
control/trajectory_follower_node/: package.xml
control/trajectory_follower_node/test/: test_controller_node.cpp  trajectory_follower_test_utils.hpp
planning/autoware_behavior_path_start_planner_module/: README.md
planning/autoware_behavior_path_start_planner_module/config/: start_planner.param.yaml
planning/behavior_path_start_planner_module/: README.md
(+52 files in other folders)
